JDK 11 support