@@ -4,7 +4,7 @@
 
    <groupId>com.homeadvisor.kafka</groupId>
    <artifactId>kafdrop</artifactId>
-   <version>2.0.6</version>
+   <version>3.0.0</version>
 
    <description>For when you have a Kaf(ka) cluster to monitor</description>
 
@@ -19,8 +19,8 @@
    </properties>
 
    <scm>
-       <connection>scm:git:git@github.com:HomeAdvisor/Kafdrop.git</connection>
-       <developerConnection>scm:git:git@github.com:HomeAdvisor/Kafdrop.git</developerConnection>
+       <connection>scm:git:git@github.com:obsidiandynamics/kafdrop.git</connection>
+       <developerConnection>scm:git:git@github.com:obsidiandynamics/kafdrop.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
 
@@ -50,9 +50,14 @@
 
    <dependencies>
       <dependency>
-         <groupId>commons-lang</groupId>
-         <artifactId>commons-lang</artifactId>
-         <version>2.6</version>
+         <groupId>org.apache.commons</groupId>
+         <artifactId>commons-lang3</artifactId>
+         <version>3.9</version>
+      </dependency>
+      <dependency>
+         <groupId>javax.xml.bind</groupId>
+         <artifactId>jaxb-api</artifactId>
+         <version>2.2.11</version>
       </dependency>
       <dependency>
          <groupId>org.apache.curator</groupId>
@@ -78,7 +83,7 @@
       <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
-         <version>1.16.6</version>
+         <version>1.18.8</version>
       </dependency>
 
       <dependency>
@@ -204,10 +209,15 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.7.0</version>
+            <version>3.8.1</version>
             <configuration>
-               <source>1.8</source>
-               <target>1.8</target>
+               <source>11</source>
+               <target>11</target>
+               <fork>true</fork>
+               <compilerVersion>11</compilerVersion>
+               <compilerArgs>
+                  <arg>--add-exports=jdk.management.agent/jdk.internal.agent=ALL-UNNAMED</arg>
+               </compilerArgs>
             </configuration>
          </plugin>
          <plugin>
@@ -237,9 +247,9 @@
          <plugin>
             <groupId>com.spotify</groupId>
             <artifactId>docker-maven-plugin</artifactId>
-            <version>0.4.13</version>
+            <version>1.2.0</version>
             <configuration>
-               <imageName>kafdrop</imageName>
+               <imageName>obsidiandynamics/kafdrop</imageName>
                <forceTags>true</forceTags>
                <dockerDirectory>${project.build.directory}/docker-ready</dockerDirectory>
                <imageTags>
